// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormEditor renders empty schema 1`] = `
<DocumentFragment>
  <form
    action="#"
  >
    <p>
      Use the Preview Tab on the right to select a field to edit ⟶
    </p>
    <div
      class="d-flex mb-3 gap-1 gap-column-4 align-items-center flex-wrap"
    >
      <button
        class="btn btn-primary btn-sm"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-plus fa-w-14 "
          data-icon="plus"
          data-prefix="fas"
          focusable="false"
          role="img"
          viewBox="0 0 448 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M416 208H272V64c0-17.67-14.33-32-32-32h-32c-17.67 0-32 14.33-32 32v144H32c-17.67 0-32 14.33-32 32v32c0 17.67 14.33 32 32 32h144v144c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32V304h144c17.67 0 32-14.33 32-32v-32c0-17.67-14.33-32-32-32z"
            fill="currentColor"
          />
        </svg>
         Add new field
      </button>
    </div>
    <button
      type="submit"
    >
      Submit
    </button>
  </form>
</DocumentFragment>
`;

exports[`FormEditor renders simple schema 1`] = `
<DocumentFragment>
  <form
    action="#"
  >
    <p>
      Use the Preview Tab on the right to select a field to edit ⟶
    </p>
    <div
      class="d-flex mb-3 gap-1 gap-column-4 align-items-center flex-wrap"
    >
      <button
        class="btn btn-primary btn-sm"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-plus fa-w-14 "
          data-icon="plus"
          data-prefix="fas"
          focusable="false"
          role="img"
          viewBox="0 0 448 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M416 208H272V64c0-17.67-14.33-32-32-32h-32c-17.67 0-32 14.33-32 32v144H32c-17.67 0-32 14.33-32 32v32c0 17.67 14.33 32 32 32h144v144c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32V304h144c17.67 0 32-14.33 32-32v-32c0-17.67-14.33-32-32-32z"
            fill="currentColor"
          />
        </svg>
         Add new field
      </button>
      <button
        class="btn btn-danger btn-sm"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-trash fa-w-14 "
          data-icon="trash"
          data-prefix="fas"
          focusable="false"
          role="img"
          viewBox="0 0 448 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M432 32H312l-9.4-18.7A24 24 0 0 0 281.1 0H166.8a23.72 23.72 0 0 0-21.4 13.3L136 32H16A16 16 0 0 0 0 48v32a16 16 0 0 0 16 16h416a16 16 0 0 0 16-16V48a16 16 0 0 0-16-16zM53.2 467a48 48 0 0 0 47.9 45h245.8a48 48 0 0 0 47.9-45L416 128H32z"
            fill="currentColor"
          />
        </svg>
         Remove current field
      </button>
    </div>
    <h6>
      Current Field
    </h6>
    <div
      class="root"
    >
      <div
        class="formGroup form-group"
        data-testid="field-template-form-group"
      >
        <div
          class="mb-2 w-100 collapse"
        >
          <div
            class="annotationPlaceholder"
          />
        </div>
        <label
          class="label form-label"
          for="rjsfSchema.schema.properties.firstName"
        >
          Name
        </label>
        <div
          class="formField"
        >
          <input
            class="form-control"
            id="rjsfSchema.schema.properties.firstName"
            name="rjsfSchema.schema.properties.firstName"
            required=""
            value="firstName"
          />
          <small
            class="text-muted form-text"
          >
            <span>
              Enter a name to refer to this value in the output later
            </span>
          </small>
        </div>
      </div>
      <div
        class="formGroup form-group"
        data-testid="field-template-form-group"
      >
        <div
          class="mb-2 w-100 collapse"
        >
          <div
            class="annotationPlaceholder"
          />
        </div>
        <label
          class="label form-label"
          for="rjsfSchema.schema.properties.firstName.title"
        >
          Label
        </label>
        <div
          class="formField"
        >
          <div
            class="root"
          >
            <div
              class="field"
            >
              <textarea
                class="form-control"
                id="rjsfSchema.schema.properties.firstName.title"
                name="rjsfSchema.schema.properties.firstName.title"
                rows="1"
              >
                First name
              </textarea>
            </div>
            <div
              class="dropdown dropdown"
              data-test-selected="Text"
              data-testid="toggle-rjsfSchema.schema.properties.firstName.title"
            >
              <button
                aria-expanded="false"
                aria-haspopup="true"
                class="dropdown-toggle btn btn-link"
                type="button"
              >
                <span
                  class="symbol"
                >
                  <test-file-stub
                    classname="root"
                  />
                </span>
              </button>
            </div>
          </div>
          <small
            class="text-muted form-text"
          >
            <span>
              The user-visible label for this field
            </span>
          </small>
        </div>
      </div>
      <div
        class="formGroup form-group"
        data-testid="field-template-form-group"
      >
        <div
          class="mb-2 w-100 collapse"
        >
          <div
            class="annotationPlaceholder"
          />
        </div>
        <label
          class="label form-label"
          for="rjsfSchema.schema.properties.firstName.description"
        >
          Field Description
        </label>
        <div
          class="formField"
        >
          <div
            class="root"
          >
            <div
              class="field"
            >
              <input
                class="form-control"
                id="rjsfSchema.schema.properties.firstName.description"
                name="rjsfSchema.schema.properties.firstName.description"
                readonly=""
                value=""
              />
            </div>
            <div
              class="dropdown dropdown"
              data-test-selected="Exclude"
              data-testid="toggle-rjsfSchema.schema.properties.firstName.description"
            >
              <button
                aria-expanded="false"
                aria-haspopup="true"
                class="dropdown-toggle btn btn-link"
                type="button"
              >
                <span
                  class="symbol"
                >
                  <test-file-stub
                    classname="root"
                  />
                </span>
              </button>
            </div>
          </div>
          <small
            class="text-muted form-text"
          >
            <span>
              The user-visible description for the field. Supports 
              <a
                href="https://docs.pixiebrix.com/developing-mods/developer-concepts/working-with-markdown"
              >
                Markdown
              </a>
            </span>
          </small>
        </div>
      </div>
      <div
        class="formGroup form-group"
        data-testid="field-template-form-group"
      >
        <div
          class="mb-2 w-100 collapse"
        >
          <div
            class="annotationPlaceholder"
          />
        </div>
        <label
          class="label form-label"
          for="rjsfSchema.schema.properties.firstName.uiType"
        >
          Input Type
        </label>
        <div
          class="formField"
        >
          <div
            class=" css-b62m3t-container"
          >
            <span
              class="css-1f43avz-a11yText-A11yText"
              id="react-select-3-live-region"
            />
            <span
              aria-atomic="false"
              aria-live="polite"
              aria-relevant="additions text"
              class="css-1f43avz-a11yText-A11yText"
              role="log"
            />
            <div
              class=" css-13cymwt-control"
            >
              <div
                class=" css-1fdsijx-ValueContainer"
              >
                <div
                  class=" css-1dimb5e-singleValue"
                >
                  Single line text
                </div>
                <div
                  class=" css-qbdosj-Input"
                  data-value=""
                >
                  <input
                    aria-activedescendant=""
                    aria-autocomplete="list"
                    aria-expanded="false"
                    aria-haspopup="true"
                    autocapitalize="none"
                    autocomplete="off"
                    autocorrect="off"
                    class=""
                    id="rjsfSchema.schema.properties.firstName.uiType"
                    role="combobox"
                    spellcheck="false"
                    style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                    tabindex="0"
                    type="text"
                    value=""
                  />
                </div>
              </div>
              <div
                class=" css-1hb7zxy-IndicatorsContainer"
              >
                <div
                  aria-hidden="true"
                  class=" css-1xc3v61-indicatorContainer"
                >
                  <svg
                    aria-hidden="true"
                    class="css-tj5bde-Svg"
                    focusable="false"
                    height="20"
                    viewBox="0 0 20 20"
                    width="20"
                  >
                    <path
                      d="M14.348 14.849c-0.469 0.469-1.229 0.469-1.697 0l-2.651-3.030-2.651 3.029c-0.469 0.469-1.229 0.469-1.697 0-0.469-0.469-0.469-1.229 0-1.697l2.758-3.15-2.759-3.152c-0.469-0.469-0.469-1.228 0-1.697s1.228-0.469 1.697 0l2.652 3.031 2.651-3.031c0.469-0.469 1.228-0.469 1.697 0s0.469 1.229 0 1.697l-2.758 3.152 2.758 3.15c0.469 0.469 0.469 1.229 0 1.698z"
                    />
                  </svg>
                </div>
                <span
                  class=" css-1u9des2-indicatorSeparator"
                />
                <div
                  aria-hidden="true"
                  class=" css-1xc3v61-indicatorContainer"
                >
                  <svg
                    aria-hidden="true"
                    class="css-tj5bde-Svg"
                    focusable="false"
                    height="20"
                    viewBox="0 0 20 20"
                    width="20"
                  >
                    <path
                      d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                    />
                  </svg>
                </div>
              </div>
            </div>
            <input
              name="rjsfSchema.schema.properties.firstName.uiType"
              type="hidden"
              value="string:::"
            />
          </div>
        </div>
      </div>
      <div
        class="formGroup form-group"
        data-testid="field-template-form-group"
      >
        <div
          class="mb-2 w-100 collapse"
        >
          <div
            class="annotationPlaceholder"
          />
        </div>
        <label
          class="label form-label"
          for="rjsfSchema.schema.properties.firstName.default"
        >
          Default Value
        </label>
        <div
          class="formField"
        >
          <div
            class="root"
          >
            <div
              class="field"
            >
              <textarea
                class="form-control"
                id="rjsfSchema.schema.properties.firstName.default"
                name="rjsfSchema.schema.properties.firstName.default"
                rows="1"
              >
                Chuck
              </textarea>
            </div>
            <div
              class="dropdown dropdown"
              data-test-selected="Text"
              data-testid="toggle-rjsfSchema.schema.properties.firstName.default"
            >
              <button
                aria-expanded="false"
                aria-haspopup="true"
                class="dropdown-toggle btn btn-link"
                type="button"
              >
                <span
                  class="symbol"
                >
                  <test-file-stub
                    classname="root"
                  />
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="formGroup form-group"
        data-testid="field-template-form-group"
      >
        <div
          class="mb-2 w-100 collapse"
        >
          <div
            class="annotationPlaceholder"
          />
        </div>
        <label
          class="label form-label"
          for="rjsfSchema.uiSchema.firstName.ui:placeholder"
        >
          Placeholder
        </label>
        <div
          class="formField"
        >
          <div
            class="root"
          >
            <div
              class="field"
            >
              <input
                class="form-control"
                id="rjsfSchema.uiSchema.firstName.ui:placeholder"
                name="rjsfSchema.uiSchema.firstName.ui:placeholder"
                readonly=""
                value=""
              />
            </div>
            <div
              class="dropdown dropdown"
              data-test-selected="Exclude"
              data-testid="toggle-rjsfSchema.uiSchema.firstName.ui:placeholder"
            >
              <button
                aria-expanded="false"
                aria-haspopup="true"
                class="dropdown-toggle btn btn-link"
                type="button"
              >
                <span
                  class="symbol"
                >
                  <test-file-stub
                    classname="root"
                  />
                </span>
              </button>
            </div>
          </div>
          <small
            class="text-muted form-text"
          >
            <span>
              A short hint displayed in the input field before the user enters a value.
            </span>
          </small>
        </div>
      </div>
      <div
        class="formGroup form-group"
        data-testid="field-template-form-group"
      >
        <div
          class="mb-2 w-100 collapse"
        >
          <div
            class="annotationPlaceholder"
          />
        </div>
        <label
          class="label form-label"
          for="rjsfSchema.schema.required"
        >
          Required Field?
        </label>
        <div
          class="formField"
        >
          <div
            class="root"
          >
            <div
              class="switch btn off btn-light"
            >
              <div
                class="switch-group"
              >
                <span
                  class="switch-on btn btn-primary"
                >
                   
                </span>
                <span
                  class="switch-off btn btn-light"
                >
                   
                </span>
                <span
                  class="switch-handle btn btn-light"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="formGroup form-group"
      data-testid="field-template-form-group"
    >
      <div
        class="mb-2 w-100 collapse"
      >
        <div
          class="annotationPlaceholder"
        />
      </div>
      <label
        class="label form-label"
        for="layoutButtons"
      >
        Field Order
      </label>
      <div
        class="formField"
      >
        <div
          class="btn-group"
          role="group"
        >
          <button
            class="btn btn-light btn-sm"
            disabled=""
            type="button"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-arrow-up fa-w-14 "
              data-icon="arrow-up"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 448 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M34.9 289.5l-22.2-22.2c-9.4-9.4-9.4-24.6 0-33.9L207 39c9.4-9.4 24.6-9.4 33.9 0l194.3 194.3c9.4 9.4 9.4 24.6 0 33.9L413 289.4c-9.5 9.5-25 9.3-34.3-.4L264 168.6V456c0 13.3-10.7 24-24 24h-32c-13.3 0-24-10.7-24-24V168.6L69.2 289.1c-9.3 9.8-24.8 10-34.3.4z"
                fill="currentColor"
              />
            </svg>
             Move up
          </button>
          <button
            class="btn btn-light btn-sm"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-arrow-down fa-w-14 "
              data-icon="arrow-down"
              data-prefix="fas"
              focusable="false"
              role="img"
              viewBox="0 0 448 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M413.1 222.5l22.2 22.2c9.4 9.4 9.4 24.6 0 33.9L241 473c-9.4 9.4-24.6 9.4-33.9 0L12.7 278.6c-9.4-9.4-9.4-24.6 0-33.9l22.2-22.2c9.5-9.5 25-9.3 34.3.4L184 343.4V56c0-13.3 10.7-24 24-24h32c13.3 0 24 10.7 24 24v287.4l114.8-120.5c9.3-9.8 24.8-10 34.3-.4z"
                fill="currentColor"
              />
            </svg>
             Move down
          </button>
        </div>
      </div>
    </div>
    <button
      type="submit"
    >
      Submit
    </button>
  </form>
</DocumentFragment>
`;

exports[`FormEditor renders unknown field format 1`] = `
<DocumentFragment>
  <form
    action="#"
  >
    <p>
      Use the Preview Tab on the right to select a field to edit ⟶
    </p>
    <div
      class="d-flex mb-3 gap-1 gap-column-4 align-items-center flex-wrap"
    >
      <button
        class="btn btn-primary btn-sm"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-plus fa-w-14 "
          data-icon="plus"
          data-prefix="fas"
          focusable="false"
          role="img"
          viewBox="0 0 448 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M416 208H272V64c0-17.67-14.33-32-32-32h-32c-17.67 0-32 14.33-32 32v144H32c-17.67 0-32 14.33-32 32v32c0 17.67 14.33 32 32 32h144v144c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32V304h144c17.67 0 32-14.33 32-32v-32c0-17.67-14.33-32-32-32z"
            fill="currentColor"
          />
        </svg>
         Add new field
      </button>
      <button
        class="btn btn-danger btn-sm"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-trash fa-w-14 "
          data-icon="trash"
          data-prefix="fas"
          focusable="false"
          role="img"
          viewBox="0 0 448 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M432 32H312l-9.4-18.7A24 24 0 0 0 281.1 0H166.8a23.72 23.72 0 0 0-21.4 13.3L136 32H16A16 16 0 0 0 0 48v32a16 16 0 0 0 16 16h416a16 16 0 0 0 16-16V48a16 16 0 0 0-16-16zM53.2 467a48 48 0 0 0 47.9 45h245.8a48 48 0 0 0 47.9-45L416 128H32z"
            fill="currentColor"
          />
        </svg>
         Remove current field
      </button>
    </div>
    <h6>
      Current Field
    </h6>
    <div
      class="root"
    >
      <div
        class="formGroup form-group"
        data-testid="field-template-form-group"
      >
        <div
          class="mb-2 w-100 collapse"
        >
          <div
            class="annotationPlaceholder"
          />
        </div>
        <label
          class="label form-label"
          for="rjsfSchema.schema.properties.unknown"
        >
          Name
        </label>
        <div
          class="formField"
        >
          <input
            class="form-control"
            id="rjsfSchema.schema.properties.unknown"
            name="rjsfSchema.schema.properties.unknown"
            required=""
            value="unknown"
          />
          <small
            class="text-muted form-text"
          >
            <span>
              Enter a name to refer to this value in the output later
            </span>
          </small>
        </div>
      </div>
      <div
        class="formGroup form-group"
        data-testid="field-template-form-group"
      >
        <div
          class="mb-2 w-100 collapse"
        >
          <div
            class="annotationPlaceholder"
          />
        </div>
        <label
          class="label form-label"
          for="rjsfSchema.schema.properties.unknown.title"
        >
          Label
        </label>
        <div
          class="formField"
        >
          <div
            class="root"
          >
            <div
              class="field"
            >
              <textarea
                class="form-control"
                id="rjsfSchema.schema.properties.unknown.title"
                name="rjsfSchema.schema.properties.unknown.title"
                rows="1"
              >
                Unknown format
              </textarea>
            </div>
            <div
              class="dropdown dropdown"
              data-test-selected="Text"
              data-testid="toggle-rjsfSchema.schema.properties.unknown.title"
            >
              <button
                aria-expanded="false"
                aria-haspopup="true"
                class="dropdown-toggle btn btn-link"
                type="button"
              >
                <span
                  class="symbol"
                >
                  <test-file-stub
                    classname="root"
                  />
                </span>
              </button>
            </div>
          </div>
          <small
            class="text-muted form-text"
          >
            <span>
              The user-visible label for this field
            </span>
          </small>
        </div>
      </div>
      <div
        class="formGroup form-group"
        data-testid="field-template-form-group"
      >
        <div
          class="mb-2 w-100 collapse"
        >
          <div
            class="annotationPlaceholder"
          />
        </div>
        <label
          class="label form-label"
          for="rjsfSchema.schema.properties.unknown.description"
        >
          Field Description
        </label>
        <div
          class="formField"
        >
          <div
            class="root"
          >
            <div
              class="field"
            >
              <input
                class="form-control"
                id="rjsfSchema.schema.properties.unknown.description"
                name="rjsfSchema.schema.properties.unknown.description"
                readonly=""
                value=""
              />
            </div>
            <div
              class="dropdown dropdown"
              data-test-selected="Exclude"
              data-testid="toggle-rjsfSchema.schema.properties.unknown.description"
            >
              <button
                aria-expanded="false"
                aria-haspopup="true"
                class="dropdown-toggle btn btn-link"
                type="button"
              >
                <span
                  class="symbol"
                >
                  <test-file-stub
                    classname="root"
                  />
                </span>
              </button>
            </div>
          </div>
          <small
            class="text-muted form-text"
          >
            <span>
              The user-visible description for the field. Supports 
              <a
                href="https://docs.pixiebrix.com/developing-mods/developer-concepts/working-with-markdown"
              >
                Markdown
              </a>
            </span>
          </small>
        </div>
      </div>
      <div
        class="formGroup form-group"
        data-testid="field-template-form-group"
      >
        <div
          class="mb-2 w-100 collapse"
        >
          <div
            class="annotationPlaceholder"
          />
        </div>
        <label
          class="label form-label"
          for="rjsfSchema.schema.properties.unknown.uiType"
        >
          Input Type
        </label>
        <div
          class="formField"
        >
          <div
            class=" css-b62m3t-container"
          >
            <span
              class="css-1f43avz-a11yText-A11yText"
              id="react-select-5-live-region"
            />
            <span
              aria-atomic="false"
              aria-live="polite"
              aria-relevant="additions text"
              class="css-1f43avz-a11yText-A11yText"
              role="log"
            />
            <div
              class=" css-13cymwt-control"
            >
              <div
                class=" css-1fdsijx-ValueContainer"
              >
                <div
                  class=" css-1jqq78o-placeholder"
                  id="react-select-5-placeholder"
                >
                  Select...
                </div>
                <div
                  class=" css-qbdosj-Input"
                  data-value=""
                >
                  <input
                    aria-activedescendant=""
                    aria-autocomplete="list"
                    aria-describedby="react-select-5-placeholder"
                    aria-expanded="false"
                    aria-haspopup="true"
                    autocapitalize="none"
                    autocomplete="off"
                    autocorrect="off"
                    class=""
                    id="rjsfSchema.schema.properties.unknown.uiType"
                    role="combobox"
                    spellcheck="false"
                    style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                    tabindex="0"
                    type="text"
                    value=""
                  />
                </div>
              </div>
              <div
                class=" css-1hb7zxy-IndicatorsContainer"
              >
                <span
                  class=" css-1u9des2-indicatorSeparator"
                />
                <div
                  aria-hidden="true"
                  class=" css-1xc3v61-indicatorContainer"
                >
                  <svg
                    aria-hidden="true"
                    class="css-tj5bde-Svg"
                    focusable="false"
                    height="20"
                    viewBox="0 0 20 20"
                    width="20"
                  >
                    <path
                      d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                    />
                  </svg>
                </div>
              </div>
            </div>
            <input
              name="rjsfSchema.schema.properties.unknown.uiType"
              type="hidden"
              value=""
            />
          </div>
        </div>
      </div>
      <div
        class="formGroup form-group"
        data-testid="field-template-form-group"
      >
        <div
          class="mb-2 w-100 collapse"
        >
          <div
            class="annotationPlaceholder"
          />
        </div>
        <label
          class="label form-label"
          for="rjsfSchema.schema.required"
        >
          Required Field?
        </label>
        <div
          class="formField"
        >
          <div
            class="root"
          >
            <div
              class="switch btn off btn-light"
            >
              <div
                class="switch-group"
              >
                <span
                  class="switch-on btn btn-primary"
                >
                   
                </span>
                <span
                  class="switch-off btn btn-light"
                >
                   
                </span>
                <span
                  class="switch-handle btn btn-light"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <button
      type="submit"
    >
      Submit
    </button>
  </form>
</DocumentFragment>
`;
